before adding vector of VBOs to i option

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cmake.configureOnOpen": true,
     "C_Cpp.configurationWarnings": "Disabled",
     "files.associations": {
-        "ios": "cpp"
+        "ios": "cpp",
+        "functional": "cpp"
     }
 }
